# python-jiractl

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  setup_hooks.py  test-requirements.txt
jiractl/: __init__.py  app.py
jiractl/commands/: base.py  comments.py  issues.py  labels.py  links.py
tests/: base.py  test_comments.py  test_issues.py  test_labels.py  test_links.py
