[metadata]
name = jiractl
version = 0.0.1.dev
summary = The command line interface for Jira REST API
description-file = README.rst
author = Bulat Gaifullin
author_email = gaifullinbf@gmail.com
url = https://github.com/bgaifullin/python-jiractl.git
home-page = https://github.com/bgaifullin/python-jiractl.git
license = MIT
keywords = jira
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Utilities

[files]
packages =
    jiractl

[entry_points]
console_scripts =
    jiractl=jiractl.app:main

jiractl =
    issue=jiractl.commands.issues:ShowIssue
    issue_create=jiractl.commands.issues:CreateIssue
    issue_edit=jiractl.commands.issues:EditIssue
    issues=jiractl.commands.issues:ListIssues
    issues_search=jiractl.commands.issues:SearchIssues
    issue_comment=jiractl.commands.comments:ShowComment
    issue_comment_edit=jiractl.commands.comments:EditComment
    issue_comments=jiractl.commands.comments:ListComments
    issue_comments_add=jiractl.commands.comments:AddComment
    issue_labels=jiractl.commands.labels:ListLabels
    issue_labels_add=jiractl.commands.labels:AddLabel
    issue_labels_drop=jiractl.commands.labels:DropLabel
    issue_link=jiractl.commands.links:ShowLink
    issue_links=jiractl.commands.links:ListLinks
    issue_links_add=jiractl.commands.links:AddLink
    issue_links_drop=jiractl.commands.links:DropLink

[global]
setup-hooks =
    pbr.hooks.setup_hook
    setup_hooks.setup_hook

[aliases]
test=pytest
